# Pycalendar

./: README.md  pyproject.toml  requirements.txt  run.py
src/pycalendar/: __init__.py
src/pycalendar/core/: __init__.py  calendar.py  event.py  notification.py  task.py
src/pycalendar/gui/: __init__.py  main.py  main_window.py
src/pycalendar/tests/: conftest.py  test_calendar.py  test_event.py  test_gui.py  test_notification.py  test_task.py
